tests/ui/transparent-struct-many.stderr
error: #[error(transparent)] requires exactly one field
 --> tests/ui/transparent-struct-many.rs:4:1
  |
3 | #[derive(Error, Debug)]
  |          ----- in this derive macro expansion
4 | #[error(transparent)]
  | ^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the derive macro `Error` (in Nightly builds, run with -Z macro-backtrace for more info)
